Issue#10 Replace some totallylazy references